--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://YanaKarpliuk.github.io/icecream-team-11",
+  "homepage": "https://serhii1976.github.io/icecream-team-11",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /icecream-team-11/"
